if(BUILD_TESTS AND MSGLIB)
  add_subdirectory(messages)
	file(GLOB tests *_test.cpp)
	foreach(test ${tests})
		get_filename_component(target ${test} NAME_WE)
		set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
		add_executable(${target} ${test})
		target_link_libraries(${target} common localbus dummy_messages mapf::elpp)
		install(TARGETS ${target} DESTINATION bin/tests/common)
		add_test(${target} ${target})
	endforeach(test ${tests})
endif()
