if(BUILD_TESTS)
    set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
    add_executable(tlvf_test main.cpp)
    target_link_libraries(tlvf_test common tlvf localbus ieee1905_transport_lib ieee1905_transport_messages)
    install(TARGETS tlvf_test DESTINATION bin/tests)
    add_test(tlvf_test tlvf_test)
endif()